--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,5 +72,15 @@
         android:layout_width="86dp"
         android:layout_height="137dp"
         tools:srcCompat="@drawable/untitled1" />
+	
+    <fragment
+        android:layout_width="320dp"
+        android:layout_height="220dp"
+        android:layout_below="@+id/schView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="68dp"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+    />
 
 </RelativeLayout>
