--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     android:id="@+id/mainView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/istockphoto_1030299568_1024x1024"
-
+    android:background="@drawable/gradient_background"
     tools:context=".MainActivity">
 
     <EditText
@@ -37,7 +36,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="28dp"
-        android:background="#E0EFCC"
+        android:background="#fff"
         android:text="category" />
 
     <com.google.android.gms.maps.MapView
@@ -74,7 +73,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="69dp"
         android:layout_toEndOf="@+id/imageView2"
-        android:background="#C7D9B2"
+
         android:fontFamily="sans-serif-black"
         android:text="PetNeeds"
         android:textSize="24sp"
