--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,16 +28,6 @@
         android:layout_toEndOf="@+id/etZipcode"
         android:src="@android:drawable/ic_menu_search" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="133dp"
-        android:layout_height="45dp"
-        android:layout_below="@+id/label"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="28dp"
-        android:background="#fff"
-        android:text="category" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView2"
@@ -92,6 +82,20 @@
         android:layout_height="220dp"
         android:layout_below="@+id/etZipcode"
         android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="43dp"
-        android:layout_marginTop="17dp" />
+        android:layout_marginTop="18dp" />
+
+    <Spinner
+        android:id="@+id/drSpin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/mapView2"
+        android:layout_alignStart="@+id/searchbutton"
+        android:layout_alignTop="@+id/searchbutton"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="23dp"
+        android:visibility="visible"
+        tools:visibility="visible" />
 </RelativeLayout>
