--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,14 +88,16 @@
 
     <Spinner
         android:id="@+id/drSpin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="171dp"
+        android:layout_height="56dp"
         android:layout_above="@+id/mapView2"
         android:layout_alignStart="@+id/searchbutton"
         android:layout_alignTop="@+id/searchbutton"
-        android:layout_marginStart="61dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginBottom="23dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="-1dp"
         android:visibility="visible"
         tools:visibility="visible" />
 </RelativeLayout>
