--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,32 +18,27 @@
         android:layout_marginTop="59dp"
         android:hint="Enter zipcode" />
 
+    <ImageButton
+        android:id="@+id/searchbutton"
+        android:layout_width="40dp"
+        android:layout_height="45dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="59dp"
+        android:layout_toEndOf="@+id/etZipcode"
+        android:src="@android:drawable/ic_menu_search" />
 
-    <SearchView
-        android:id="@+id/sv_location"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/bg_round"
-        android:elevation="5dp"
-        android:iconifiedByDefault="false"
-        android:queryHint="Enter a zipcode" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView2"
         android:layout_width="320dp"
         android:layout_height="220dp"
-        android:layout_below="@+id/sv_location"
+        android:layout_below="@+id/searchbutton"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="48dp"
         android:background="#E6D3D3"
         android:foregroundTint="#DCEBCD" />
 
@@ -55,18 +50,18 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="49dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="13dp"
         android:layout_marginBottom="21dp" />
 
     <TextView
         android:id="@+id/label"
-        android:layout_width="131dp"
-        android:layout_height="33dp"
+        android:layout_width="173dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="206dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="66dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="69dp"
         android:layout_toEndOf="@+id/imageView2"
 
         android:fontFamily="sans-serif-black"
@@ -83,25 +78,26 @@
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="325dp"
-        android:layout_height="250dp"
+        android:layout_width="320dp"
+        android:layout_height="220dp"
+        android:layout_below="@+id/etZipcode"
         android:layout_alignParentStart="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="80dp" />
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="18dp" />
 
     <Spinner
         android:id="@+id/drSpin"
-        android:layout_width="195dp"
-        android:layout_height="26dp"
+        android:layout_width="176dp"
+        android:layout_height="46dp"
         android:layout_above="@+id/mapView2"
-        android:layout_below="@+id/label"
+        android:layout_alignStart="@+id/searchbutton"
+        android:layout_alignTop="@+id/searchbutton"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="9dp"
-        android:layout_toEndOf="@+id/sv_location"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="0dp"
         android:visibility="visible"
         tools:visibility="visible" />
 </RelativeLayout>
