detail activity xml has been implemented

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,14 +88,14 @@
 
     <Spinner
         android:id="@+id/drSpin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="172dp"
+        android:layout_height="52dp"
         android:layout_above="@+id/mapView2"
         android:layout_alignStart="@+id/searchbutton"
         android:layout_alignTop="@+id/searchbutton"
-        android:layout_marginStart="61dp"
+        android:layout_marginStart="47dp"
         android:layout_marginTop="14dp"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="-5dp"
         android:visibility="visible"
         tools:visibility="visible" />
 </RelativeLayout>
