--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,6 +14,7 @@
         android:id="@+id/imgView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
         android:layout_marginTop="84dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -32,7 +33,8 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginLeft="100dp"/>
 
     <RatingBar
         android:id="@+id/rtBar"
@@ -40,7 +42,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="313dp" />
+        tools:layout_editor_absoluteY="313dp"
+        android:layout_marginLeft="100dp"/>
 
     <TextView
         android:id="@+id/adView"
@@ -50,7 +53,8 @@
         android:text="address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rtBar" />
+        app:layout_constraintTop_toBottomOf="@+id/rtBar"
+        android:layout_marginLeft="100dp"/>
 
     <TextView
         android:id="@+id/phView"
@@ -61,7 +65,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/adView" />
+        app:layout_constraintTop_toBottomOf="@+id/adView"
+        android:layout_marginLeft="100dp"/>
 
     <TextView
         android:id="@+id/hView"
@@ -72,5 +77,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phView" />
+        app:layout_constraintTop_toBottomOf="@+id/phView"
+        android:layout_marginLeft="100dp"
+        />
 </LinearLayout>
