--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="49dp"
         android:layout_marginTop="27dp"
-        android:layout_marginBottom="21dp" />
+        android:layout_marginBottom="21dp"
+        />
 
     <TextView
         android:id="@+id/label"
@@ -61,9 +62,10 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="149dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="82dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="84dp"
         android:layout_toEndOf="@+id/imageView2"
         android:fontFamily="sans-serif-black"
         android:text="PetNeeds"
@@ -72,11 +74,13 @@
 
     <SearchView
         android:id="@+id/sv_location"
-        android:layout_width="200dp"
+        android:layout_width="302dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="52dp"
         android:layout_marginTop="50dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="57dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/bg_round"
         android:elevation="5dp"
@@ -99,13 +103,5 @@
         android:layout_marginStart="43dp"
         android:layout_marginTop="110dp" />
 
-    <Spinner
-        android:id="@+id/drSpin"
-        android:layout_width="200dp"
-        android:layout_height="38dp"
-        android:layout_marginStart="250dp"
-        android:layout_marginTop="55dp"
-        android:layout_marginBottom="23dp"
-        android:visibility="visible"
-        tools:visibility="visible" />
+
 </RelativeLayout>
