--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,7 @@
         android:layout_toEndOf="@+id/imageView2"
         android:fontFamily="sans-serif-black"
         android:text="PetNeeds"
+        android:gravity="center"
         android:textSize="24sp"
         android:textStyle="bold" />
 
