--- a/app/src/main/res/layout/petdetails.xml
+++ b/app/src/main/res/layout/petdetails.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:background="@drawable/row_background"
+    android:layoutMode="opticalBounds"
+    android:padding="5dp"
+    android:rotation="0"
+    android:rotationX="0"
+    android:rotationY="0">
 
 
     <TextView
